<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="E_ResetZero" Id="{bda51dd9-b3e4-44c1-a309-5d7511816cd0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ResetZero :
(
    INIT := 0,
	HOME_AXIS,
	FIND_POS_ONE,
	PREPARE_POS_ONE_X,
	RECORD_POS_ONE_X,
	PREPARE_POS_ONE_Y,
	RECORD_POS_ONE_Y,
	FIND_POS_TWO,
	POSITIONING
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>